From Demo To MyDev/sample/retrieveSource/objects/KPI__c.object
<CustomObject>
    <fields>
        <fullName>AverageInvoiceFact__c</fullName>
        <label>Средний чек (факт)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AverageInvoicePlan__c</fullName>
        <label>Средний чек (план)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessTripsNumberFact__c</fullName>
        <label>Кол-во командировок (факт)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessTripsNumberPlan__c</fullName>
        <label>Кол-во командировок (план)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfficesActivatedThisPeriodFact__c</fullName>
        <label>Активировано офисов (факт)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfficesActivatedThisPeriodPlan__c</fullName>
        <label>Активировано офисов (план)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PeriodSalesVolumeFact__c</fullName>
        <label>Объём продаж (факт)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PeriodSalesVolumePlan__c</fullName>
        <label>Объём продаж (план)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PoliciesSoldFact__c</fullName>
        <label>Продано полисов (факт)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PoliciesSoldPlan__c</fullName>
        <label>Продать полисов (план)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quartal__c</fullName>
        <label>Квартал</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2019 Q1</fullName>
                </value>
                <value>
                    <fullName>2019 Q2</fullName>
                </value>
                <value>
                    <fullName>2019 Q3</fullName>
                </value>
                <value>
                    <fullName>2019 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Сотрудник</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitsNumberFact__c</fullName>
        <label>Кол-во встреч (факт)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitsNumberPlan__c</fullName>
        <label>Кол-во встреч (план)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Quartal__c</columns>
        <columns>NAME</columns>
        <columns>VisitsNumberPlan__c</columns>
        <columns>VisitsNumberFact__c</columns>
        <columns>OfficesActivatedThisPeriodPlan__c</columns>
        <columns>OfficesActivatedThisPeriodFact__c</columns>
        <columns>BusinessTripsNumberPlan__c</columns>
        <columns>BusinessTripsNumberFact__c</columns>
        <columns>PeriodSalesVolumePlan__c</columns>
        <columns>PeriodSalesVolumeFact__c</columns>
        <columns>PoliciesSoldFact__c</columns>
        <columns>PoliciesSoldPlan__c</columns>
        <columns>AverageInvoicePlan__c</columns>
        <columns>AverageInvoiceFact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_2019_Q4</fullName>
        <columns>User__c</columns>
        <columns>Quartal__c</columns>
        <columns>NAME</columns>
        <columns>OfficesActivatedThisPeriodPlan__c</columns>
        <columns>OfficesActivatedThisPeriodFact__c</columns>
        <columns>VisitsNumberPlan__c</columns>
        <columns>VisitsNumberFact__c</columns>
        <columns>BusinessTripsNumberPlan__c</columns>
        <columns>BusinessTripsNumberFact__c</columns>
        <columns>PeriodSalesVolumePlan__c</columns>
        <columns>PeriodSalesVolumeFact__c</columns>
        <columns>PoliciesSoldFact__c</columns>
        <columns>PoliciesSoldPlan__c</columns>
        <columns>AverageInvoicePlan__c</columns>
        <columns>AverageInvoiceFact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quartal__c</field>
            <operation>equals</operation>
            <value>2019 Q4</value>
        </filters>
        <label>2019 - Q4</label>
    </listViews>
    <listViews>
        <fullName>Makarov_Sergey</fullName>
        <columns>NAME</columns>
        <columns>Quartal__c</columns>
        <columns>VisitsNumberPlan__c</columns>
        <columns>VisitsNumberFact__c</columns>
        <columns>OfficesActivatedThisPeriodPlan__c</columns>
        <columns>OfficesActivatedThisPeriodFact__c</columns>
        <columns>BusinessTripsNumberPlan__c</columns>
        <columns>BusinessTripsNumberFact__c</columns>
        <columns>PeriodSalesVolumePlan__c</columns>
        <columns>PeriodSalesVolumeFact__c</columns>
        <columns>PoliciesSoldFact__c</columns>
        <columns>PoliciesSoldPlan__c</columns>
        <columns>AverageInvoicePlan__c</columns>
        <columns>AverageInvoiceFact__c</columns>
        <columns>User__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Сергей Макаров</value>
        </filters>
        <label>Макаров Сергей</label>
    </listViews>
    <listViews>
        <fullName>X2019_Q3</fullName>
        <columns>User__c</columns>
        <columns>Quartal__c</columns>
        <columns>NAME</columns>
        <columns>OfficesActivatedThisPeriodPlan__c</columns>
        <columns>OfficesActivatedThisPeriodFact__c</columns>
        <columns>VisitsNumberPlan__c</columns>
        <columns>VisitsNumberFact__c</columns>
        <columns>BusinessTripsNumberPlan__c</columns>
        <columns>BusinessTripsNumberFact__c</columns>
        <columns>PeriodSalesVolumePlan__c</columns>
        <columns>PeriodSalesVolumeFact__c</columns>
        <columns>PoliciesSoldFact__c</columns>
        <columns>PoliciesSoldPlan__c</columns>
        <columns>AverageInvoicePlan__c</columns>
        <columns>AverageInvoiceFact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quartal__c</field>
            <operation>equals</operation>
            <value>2019 Q3</value>
        </filters>
        <label>2019 - Q3</label>
    </listViews>
    <nameField>
        <displayFormat>KPI-{0000000}</displayFormat>
        <label>KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>